--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 							<div  class="bloc1">
 								<ul class="minidate">
-									<li>2020<br/>Cherbourg</li>
+									<li>2020</li>
 								</ul>	
 								<div class="xp">
 									<p class="lieu">Lycée Sauxmarais</p>
@@ -68,10 +68,10 @@
 							</div>
 							<div class="bloc2">
 								<ul class="minidate2"> 
-									<li>2015 - 2017  <br> Caen</li>
+									<li>2 ans</li>
 								</ul>	
 								<div class="xp">
-									<p class="lieu">UNIVERSITY DE CAEN</p>
+									<p class="lieu">UNIVERSITY</p>
 		                        	<p> Licence art du spectacle </p>
 		                        	<p> Passionné de film, mais également d'écriture, je me suis d'abord tournée vers une licence d'Art du spectacle, option cinéma.</p>
 								</div>
