--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								</ul>	
 								<div class="xp">
 									<p class="lieu">Lycée Sauxmarais</p>
-		                        	<p> junior Web Developer </p>
+		                        	<p>Web Developer </p>
 		                        	<p> Je suis actuellement dans l'apprentissage du metier de développeur web. D'ici quelques mois, l'informatique n'aura plus aucun secret pour moi. Je pourrais ainsi donner vie aux maquettes visuelles d'un site ou d’une application web. Je serais capable de traduire, en langage web, des recommandations graphiques en rédigeant du code HTML, CSS, mais aussi JavaScript. </p>		
 								</div>
 							</div>
