--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 						<section class="colonnegauche">
 		                    <div  class="contact">
 		                        <h3> CONTACT </h3><!--Comment me contacter-->
-		                        <p class="Pres">  «𝙄 𝗈𝗇𝗅𝗒 𝗐𝖺𝗍𝖼𝗁 𝓭é𝓬𝓸𝓵𝓵𝓮𝓽é 𝓭𝓮 𝕽𝖊𝖓𝖔»#2027<br>
+		                        <p class="Pres">  «𝙄 𝗈𝗇𝗅𝗒 𝗐𝖺𝗍𝖼𝗁 𝓭é𝓬𝓸𝓵𝓵𝓮𝓽é 𝓭𝓮 𝕽𝖊𝖓𝖔»#2027<br><br>
 	                        	Yuxeliste_Cosplay // Tiktok <br><br>
-	                        	Lady_yurii//Instram<br/>
+	                        	Lady_yurii//Instagram<br/><br>
 		                    </div>
 		                    <div  class="moi">
 		                        <h3> À PROPOS DE MOI</h3><!--Petit texte sur moi-->
